# UniversitLearning

./: Main.java  README.md
First course/: README.md  ReadMe.txt  list.c  main.c  num1.c
First course/Huffman/: README.md  decoding.h  encoding.h  main.c  readme.md  structs.h  test.txt
First course/avl_tree/: tree.h
First course/expert_system/: README.md  db.txt  expertsystem.c
First course/graphs/ArticulationPoits/: README.md  funcs.h  main.c  structs.h
First course/graphs/Dijkstra/: README.md  graph.h  main.c
First course/graphs/dijkstra/: funcs.h
First course/graphs/kosaraju/: README.md  main.c  structs.h
First course/graphs/kruskal/: README.md  funcs.h  main.c  structs.h
First course/graphs/prim/: README.md  funcs.h  main.c  structs.h
First course/graphs/topsort/: README.md  funcs.h  main.c  structs.h
First course/labs/: README.md  lab0.c  lab1-0.c  lab2.c  lab3-1.c  lab4.c
First course/part1/: last-task-3-10.c  num11.c  num12.c  num13.c  num14.c  num15.c  num16.c  num17.c  num18.c  num21.c  num22.c  num23.c  num24.c  num25.c  num26.c  num31.c  num32.c  num33.c  num34.c  num35.c  num36.c  num37.c  num39.c
First course/part2/: num2.c  num3.c  num4.c  num5.c  num6.c  num7.c  num8.c  num9.c  num_10.c  num_11.c  num_14.c  num_15.c
First course/part3/: num1.c  num2.c  num3.c  num4.c  num5.c  num6.c  num7.c  num8.c  num9.c  num_10.c  num_11.c  num_12.c  num_13.c  num_14.c  num_15.c
Second Course/: README.md
Second Course/Computers and Peripherals/: README.md
Second Course/Computers and Peripherals/lab1-4/: README.md  integral.c
Second Course/Computers and Peripherals/lab5-6/: README.md  libusb.cpp  opecv.cpp
Second Course/Computers and Peripherals/lab8/: README.md  cache.cpp
Second Course/Computers and Peripherals/lab9/: README.md  associativity.cpp
Second Course/OOP/: FabricConfig.cfg  README.md
Second Course/OOP basics/: CMakeLists.txt  README.md
Second Course/OOP basics/lab0a/: CMakeLists.txt  main.cpp  module1.h  module2.h  module3.cpp  module3.h
Second Course/OOP basics/lab0b/: filereader.cpp  filereader.h  filewritter.cpp  filewritter.h  main.cpp
Second Course/OOP basics/lab1/: CMakeLists.txt  README.md  filereader.cpp  filereader.h  filewritter.cpp  filewritter.h  in.txt  main.cpp
Second Course/OOP basics/lab2/: CMakeLists.txt  README.md  bitarray.cpp  bitarray.h  main.cpp  tests.cpp
Second Course/OOP basics/lab3/: CMakeLists.txt  README.md  default.txt  game.cpp  game.h  inhandler.cpp  inhandler.h  main.cpp  universe.cpp  universe.h
Second Course/OOP basics/lab4/: CMakeLists.txt  README.md  converters.cpp  converters.h  inhandler.cpp  inhandler.h  main.cpp  tests.cpp  wavhandler.cpp  wavhandler.h
Second Course/OOP basics/lab4/wav files/: README.md
Second Course/OOP basics/lab5/: CMakeLists.txt  README.md  csvpars.h  data.csv  lib.cpp  main.cpp  printtup.h  tests.cpp
Second Course/OOP basics/lab5/csvs/: data.csv  shld.csv  spl.csv
Second Course/OOP/lab1/: Collector.java  Main.java  README.md  Writer.java
Second Course/OOP/lab2/: README.md  (+4 more)
Second Course/OPP/: README.md
Third course/NETS/: HTTPSearcher.java  Server.java
Third course/TCM/: README.md
(+129 files in other folders)
